testdata/baselines/reference/submodule/compiler/expandoFunctionContextualTypesJs.errors.txt
input.js(5,48): error TS2304: Cannot find name 'P'.
input.js(48,1): error TS2309: An export assignment cannot be used in a module with other exported elements.
input.js(52,17): error TS2322: Type '{ color: string; }' is not assignable to type '{ color: "blue" | "red"; }'.
  Types of property 'color' are incompatible.
    Type 'string' is not assignable to type '"blue" | "red"'.


==== input.js (3 errors) ====
    /** @typedef {{ color: "red" | "blue" }} MyComponentProps */
    
    /**
     * @template P 
     * @typedef {{ (): any; defaultProps?: Partial<P> }} StatelessComponent */
                                                   ~
!!! error TS2304: Cannot find name 'P'.
    
     /**
      * @type {StatelessComponent<MyComponentProps>}
      */
    const MyComponent = () => /* @type {any} */(null);
    
    MyComponent.defaultProps = {
        color: "red"
    };
    
    const MyComponent2 = () => null;
    
    /**
     * @type {MyComponentProps}
     */
    MyComponent2.defaultProps = {
        color: "red"
    }
    
    /**
      * @type {StatelessComponent<MyComponentProps>}
     */
    const check = MyComponent2;
    
    /**
     * 
     * @param {{ props: MyComponentProps }} p 
     */
    function expectLiteral(p) {}
    
    function foo() {
        /**
         * @type {MyComponentProps}
         */
        this.props = { color: "red" };
    
        expectLiteral(this);
    }
    
    /**
     * @type {MyComponentProps}
     */
    module.exports = {
    ~~~~~~~~~~~~~~~~~~
        color: "red"
    ~~~~~~~~~~~~~~~~
    }
    ~
!!! error TS2309: An export assignment cannot be used in a module with other exported elements.
    
    expectLiteral({ props: module.exports });
                    ~~~~~
!!! error TS2322: Type '{ color: string; }' is not assignable to type '{ color: "blue" | "red"; }'.
!!! error TS2322:   Types of property 'color' are incompatible.
!!! error TS2322:     Type 'string' is not assignable to type '"blue" | "red"'.
!!! related TS6500 input.js:32:14: The expected type comes from property 'props' which is declared here on type '{ props: { color: "blue" | "red"; }; }'
    